Fixed dark mode on resume css

--- a/resume.css
+++ b/resume.css
@@ -140,10 +140,6 @@ h2 + ul + p {
       background: #232323;
   }
   #resume {
-      margin: 0 auto;
-      max-width: 800px;
-      padding: 40px 60px;
-      background: #232323;
       border: 1px solid #333333;
       box-shadow: 2px 2px 4px #444444;
       -webkit-box-shadow: 2px 2px 4px #444444;
